--- a/global.css
+++ b/global.css
@@ -3,5 +3,5 @@
   html{
     font-family: Kanit; 
     color: white;
-    background: linear-gradient(90deg, #453e84, #683675, #7c3771);
+    background: linear-gradient(90deg, #292454, #44214c, #441a3c);
 }
