--- a/global.css
+++ b/global.css
@@ -9,22 +9,24 @@
 a{
   text-decoration: none;
 }
-
 .main-container {
   z-index: 0;
   margin-right: auto;
   margin-left: auto;
 }
+
 @media (min-width: 768px) {
   .main-container {
     width: 750px;
   }
 }
+
 @media (min-width: 992px) {
   .main-container {
     width: 970px;
   }
 }
+
 @media (min-width: 1200px) {
   .main-container {
     width: 1170px;
@@ -43,21 +45,18 @@ body {
 
 .topnav {
   display: flex;
-
   align-items: center;
   overflow: hidden;
 }
 
 .navbar {
-  display: flex;
   box-shadow: 4px -20px 10px 17px rgba(255, 255, 255, 0.8);
-
   align-items: center;
   overflow: hidden;
 }
 
 .topnav a {
-  float: right;
+  
   display: block;
   color: #f2f2f2;
   text-align: center;
@@ -88,8 +87,8 @@ body {
 @media screen and (max-width: 600px) {
   .navlogo {
     width: 50px;
-
-    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .topnav a:not(:first-child) {
@@ -104,9 +103,12 @@ body {
     flex-direction: column;
     padding-top: 10px;
   }
+
   .topnav {
     justify-content: space-between;
+    align-items: center;
   }
+
   .topnav.responsive a {
     display: block;
     text-align: center;
