Password show hide and password validation

--- a/Authentication/login.css
+++ b/Authentication/login.css
@@ -34,6 +34,24 @@
     }
 }
 
+#password-container
+{
+  position: relative;
+  display: inline-block;
+}
+#password-input
+{
+  width: 95%;
+}
+#eye
+{
+  position: absolute;
+  top: 18%;
+  right: 3%;
+  opacity: 85%;
+  cursor: pointer;
+}
+
 
 .login-logo{
     padding-top: 100px;
@@ -47,7 +65,7 @@
     padding: 20px;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 form {
@@ -75,6 +93,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 25px;
 }
 
 button:hover {
