--- a/global.css
+++ b/global.css
@@ -158,7 +158,7 @@ footer a {
   font-weight: bold;
 }
 
-.hebele a:before
+.footer-links a:before
 {
   content: "";
   position: absolute;
@@ -170,7 +170,7 @@ footer a {
   transition: .3s;
 }
 
-.hebele a:hover::before
+.footer-links a:hover::before
 {
   width: 100%;
 }
