--- a/index.css
+++ b/index.css
@@ -53,6 +53,46 @@
   -ms-overflow-style: none;
 }
 
+#search-bar-container {
+  display: flex;
+  align-items: center;
+}
+
+#search-form {
+  box-sizing: border-box;
+}
+
+#search-icon{
+  position: absolute;
+  top: 2.4%;
+  right: 390px;
+  cursor: pointer;
+}
+
+#search-bar-container{
+}
+
+#search-card-container{
+  background-color: rebeccapurple;
+  border: 1px solid white;
+  width: 176px;
+}
+
+.search-item{
+  display: flex;
+}
+
+.search-item-image{
+  width: 110px;
+}
+
+.search-item-info{
+}
+
+#search-item-info{
+  display: flex;
+}
+
 ol,
 li {
   list-style: none;
