--- a/Games/game.css
+++ b/Games/game.css
@@ -66,6 +66,11 @@
     font-weight: bold;
 }
 @media screen and (max-width: 630px) {
+  
+  .search-container{
+
+    margin-left:10px;
+  }
   .left-half {
     width: 50%;
     padding-left: 20px;
@@ -145,3 +150,41 @@
   .game-long-description{
     text-align: justify;
   }
+
+  #searchInput {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    width: 270px;
+    margin-bottom: 5px;
+  }
+  
+  #searchInput:focus {
+    outline: none;
+    border-color: #007bff; 
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); 
+  }
+
+  .game-search{
+    
+    width: 270px;
+    padding: 20px; 
+    transition: .3s;
+    border-radius: 15px;
+    background-color:rgba(60, 60, 60, 0.425); 
+    margin-top: 3px;
+
+  }
+
+    
+  .game-search:hover{
+    background-color:gray; 
+   }
+
+  .search-container{
+
+    margin-top: 20px;
+  }
+
+ 
