--- a/public/css/global.css
+++ b/public/css/global.css
@@ -44,6 +44,7 @@ body {
   margin-right: 30px;
 }
 
+
 .topnav {
   display: flex;
   align-items: center;
@@ -66,9 +67,13 @@ body {
   font-size: 17px;
   transition: 0.4s;
 }
+.avatar{
+  width: 40px;
+  border-radius: 50%;
+}
 
 .topnav a:hover {
-  background-color: rgb(245, 61, 61);
+  background-color: rgb(245, 61, 61);;
   color: white;
 }
 
@@ -84,8 +89,32 @@ body {
 .menu-icon {
   width: 3cqh;
 }
+.user-actions {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
 
+.user-actions a {
+  color: #f2f2f2;
+  text-decoration: none;
+  padding: 14px 16px;
+  font-size: 17px;
+  transition: 0.4s;
+}
+
+.panel-link{
+  background-color: #3e3783;
+}
+
+.username {
+  margin-right: 10px;
+}
 @media screen and (max-width: 600px) {
+  .user-actions {
+    margin-left: 0;
+    margin-top: 10px;
+}
   .navlogo {
     width: 50px;
     margin-left: 10px;
