Added error mesages to login and signup

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -74,14 +74,44 @@ form {
 }
 
 
+#submit{
+  margin-top: 20px;
+  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#submit:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: .1s;
+}
+
+
+
+.error-message{
+  color: red;
+  font: italic;
+}
 
 label {
+  margin-top: 16px;
     margin-bottom: 8px;
 }
 
 input {
     padding: 8px;
-    margin-bottom: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
