--- a/public/css/news.css
+++ b/public/css/news.css
@@ -54,6 +54,7 @@
 
 .title-and-text{
     padding: 10px;
+    width: 100%;
 }
 
 @media screen and (max-width: 630px) {
@@ -88,7 +89,7 @@
   }
 
   .written-by{
-    
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
