--- a/public/css/global.css
+++ b/public/css/global.css
@@ -257,46 +257,26 @@ footer input {
 }
 
 
-.dropdown {
-  float: left;
-  overflow: hidden;
+.cart{
+  width: 30px;
 }
 
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+.cart-link{
+  background-color: #3e3783;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 8px 10px !important;
+    margin-left: 20px;
+    margin-left: 20px;
+
+    text-decoration: none;
+    font-size: 17px;
+    transition: 0.4s;
+  
+
 }
-
-
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+  .cart-link:hover {
+    background-color: rgb(245, 61, 61);;
+    color: white;
+  }
