--- a/public/css/game.css
+++ b/public/css/game.css
@@ -110,6 +110,25 @@
   background-color: rgb(9, 136, 9);
 }
 
+
+
+.search-btn {
+  background-color: rgb(8, 189, 8);
+  color: #fff;
+  padding: 11px 12px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+
+.search-btn:hover {
+  background-color: rgb(9, 136, 9);
+}
+
+
+
 .cart-btn {
   background-color: #3498db;
   color: #fff;
