--- a/public/css/login.css
+++ b/public/css/login.css
@@ -117,6 +117,14 @@ input {
 }
 
 
+.forgot-container {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .link{
     text-decoration: underline;
